--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CODAP Starter Plugin</title>
-    <meta name="description" content="CODAP Starter Plugin">
+    <title>Sampler</title>
+    <meta name="description" content="Sampler">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">sampler</div>
   </body>
 </html>
