Adds translation strings.json file
Adds localeManager for translation scripts

Adds translation keys to model-header elements

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sampler</title>
+    <title data-text="DG.plugin.Sampler.title"></title>
     <meta name="description" content="Sampler">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
